--- a/css/menu.css
+++ b/css/menu.css
@@ -17,7 +17,7 @@ header {
   border-width: 3px;
   border-top-style: solid ;
   border-bottom-style: solid ;
-  z-index: 99;
+  z-index: 9997;
   /**/
   position: absolute;
   top: 9rem;
@@ -134,7 +134,7 @@ a.sub-link {
     position: absolute;
     left: 0;
     right:0;
-    z-index: 98;
+    z-index: 9998;
     transition: all 400ms;
   }
 
